# LittleBigPatcher-for-Custom-Servers-Vita-Homebrew

./: CMakeLists.txt  README.md  build.sh  patch.lua  ps3_test_patch_file.elf  vita_test_patch_file.velf
.github/workflows/: release_vpk.yml
art_source_files/: bg.pdn
sce_sys/livearea/contents/: template.xml
src/: colours_config.c  colours_config.h  copyfile_thing.c  copyfile_thing.h  for_elfinject_globals.c  for_elfinject_globals.h  main.c  patching_eboot_elf_code.c  patching_eboot_elf_code.h  patching_eboot_elf_vita_dlc_lock_removal.c  patching_eboot_elf_vita_dlc_lock_removal.h  read_sfo.c  save_folders.h  sha1.h  text_input_vita.c  text_input_vita.h  types_for_my_patcher_app.h
src/elf_injector/: Makefile  elf.h  elf_inject.c  elf_inject.h  sha256.c  sha256.h
src/lua-5.4.7/: copy_lua_files_for_cmake.py
src/lua-5.4.7/src/: lua.c
src/vita-unmake-fself/: Makefile  vita_unmake_fself.c  vita_unmake_fself.h
